# websockets-chat

./: README.md
websocket-client/: Cargo.toml
websocket-client/src/: main.rs
websocket-server/: .gitignore  Cargo.toml  message_log.txt
websocket-server/src/: main.rs
