[package]
name = "websocket-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.30"
env_logger = "0.10.0"
futures-channel = "0.3.28"
futures-util = "0.3.28"
log = "0.4.19"
mio = "0.8.11"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20.1"
